services/questionnaire-api/deployments/questionnaire-api/templates/questionnaire-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: questionnaire-api
  labels:
    istio-injection: enabled
