services/questionnaire-api/deployments/questionnaire-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: questionnaire-api
  name: questionnaire-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: questionnaire-api
  template:
    metadata:
      labels:
        name: questionnaire-api
    spec:
      containers:
        - name: questionnaire-api
          image: questionnaire-api:latest
          imagePullPolicy: IfNotPresent
