services/questionnaire-api/deployments/questionnaire-api/templates/questionnaire-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questionnaire-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-api
  template:
    metadata:
      labels:
        app: questionnaire-api
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"descriptor","configmap":{"name":"questionnaire-bied-set","items":[{"key":"bied.pb","path":"bied.pb"}]}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"descriptor","mountPath":"/etc/envoy"}]'
    spec:
      containers:
        - name: questionnaire-api
          image: questionnaire-api:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
          ports:
            - containerPort: 5000
