services/questionnaire-api/deployments/questionnaire-api/templates/questionnaire-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: questionnaire-api
  labels:
    app: questionnaire-api-service
  name: questionnaire-api-service
spec:
  ports:
    - name: grpc
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: questionnaire-api
