services/questionnaire-api/deployments/questionnaire-api/templates/questionnaire-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: questionnaire-api-filter
spec:
  workloadSelector:
    labels:
      app: questionnaire-api
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.grpc_json_transcoder
          config:
            proto_descriptor: /etc/envoy/bied.pb
            services:
              - HealthCheck.HealthCheck
              - Questionnaire.Questionnaire
            print_options:
              add_whitespace: true
              always_print_primitive_fields: true
              always_print_enums_as_ints: false
              preserve_proto_field_names: false
